trunk/Archive2/81/3bfa94d3e6404d/main.cpp
#include <functional>

template <typename T, typename Comparer = std::greater<T>>
class LinkedList
{
  //...
  void insert(T& value)
  {
      Comparer comp;
      //...
      if ( comp(value, current_item) ) // tests if value > current_item
  };